--- a/app/src/main/res/layout/activity_quotes.xml
+++ b/app/src/main/res/layout/activity_quotes.xml
@@ -7,7 +7,7 @@
     android:layout_margin="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".scenes.QuotesActivity">
+    tools:context=".scenes.quotes.QuotesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
